snapshots/com/wadpam/openserver/errors/maven-metadata.xml.md5
fb464f4e28d7f3bdf69432c1a2a377d4